--- a/config/_default/languages.yaml
+++ b/config/_default/languages.yaml
@@ -1,9 +1,9 @@
 # Enable multilanguage site support
 en:
   languageName: English
-  title: Wu Jin's Site
+  title: Wu Jin Master's Site
   weight: 1
 zh-cn:
   languageName: 中文
-  title: 吴进的个人站
+  title: 吴进大师的个人站
   weight: 2
